--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -895,16 +895,25 @@ _structures:
                           size: 120
                           bed-size: king bed-size
                           sleeps: 2
+                          extra-feature:
+                            - additional Living area
+                            - Ocean view
                           content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
                         - name: Garden View King Room
                           size: 120
                           bed-size: king bed-size
                           sleeps: 2
+                          extra-feature:
+                            - additional Living area
+                            - Ocean view
                           content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
                         - name: Lagoon View King Room
                           size: 120
                           bed-size: king bed-size
                           sleeps: 2
+                          extra-feature:
+                            - additional Living area
+                            - Ocean view
                           content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
                 -   heading: ONE & TWO BEDROOM SUITES
                     img: /uploads/KC-Regent-Arch-1.jpg
@@ -913,16 +922,25 @@ _structures:
                           size: 120
                           bed-size: king bed-size
                           sleeps: 2
+                          extra-feature:
+                            - additional Living area
+                            - Ocean view
                           content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
                         - name: Garden View King Room
                           size: 120
                           bed-size: king bed-size
                           sleeps: 2
+                          extra-feature:
+                            - additional Living area
+                            - Ocean view
                           content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
                         - name: Lagoon View King Room
                           size: 120
                           bed-size: king bed-size
                           sleeps: 2
+                          extra-feature:
+                            - additional Living area
+                            - Ocean view
                           content: Positioned within lush tropical landscapes, the Studio Suite draws  upon the artistry of Indonesian design, inviting quiet indulgence. Step  onto the balcony to absorb Bali’s verdant beauty and vibrant blooms,  gaze over the Indian ocean in an Ocean View, or step from your terrace  directly into the turquoise pool with the Lagoon Access. A king bed  offers serene comfort, while unlimited laundry, all‑day breakfast, and  assistance from a Regent Experience Agent elevate your stay. 
             color-scheme: mint-400
             min-height: 50vh
