--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -572,6 +572,10 @@ _structures:
               subHeading: "TARU"
               heading: "TARU"
               p-text: <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim  veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  commodo consequat.</p><p>Open 8am - 9pm everyday.</p>
+              buttons: 
+                  -   text: Discover more
+                      url:     
+                      button-color: mint-400
           carousel:
               desktop-image-position: left
               dots: true
