--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -450,16 +450,16 @@ _structures:
           _id: grid-simple-2-col-icon
           heading: Unique Regent Amenities
           grid:
-              - heading: Gourmet dinning
+              - heading: Gourmet dining
                 icon: /uploads/bicycle.svg
                 description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe nam accusamus aliquid architecto aut ex laborum soluta
-              - heading: Gourmet dinning
+              - heading: Gourmet dining
                 icon: /uploads/bicycle.svg
                 description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe nam accusamus aliquid architecto aut ex laborum soluta
-              - heading: Gourmet dinning
+              - heading: Gourmet dining
                 icon: /uploads/bicycle.svg
                 description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe nam accusamus aliquid architecto aut ex laborum soluta
-              - heading: Gourmet dinning
+              - heading: Gourmet dining
                 icon: /uploads/bicycle.svg
                 description: Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae saepe nam accusamus aliquid architecto aut ex laborum soluta
           color-scheme: base
