--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,6 +10,8 @@ header_links:
     link: /experiences
   - text: SUITES and VILLAS
     link: /suites-and-villas
+  - text: WELLNESS
+    link: /wellness
 footer-logo-image: /uploads/kc-logo.png
 footer-logo-size: 450px
 footer_nav_bar:
