--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -277,6 +277,9 @@ _inputs:
   youtube_placeholder:
     type: image
     cascade: true
+  tour-pic:
+    type: image
+    label: Virtual Tour picture
   src:
     type: image
     label: image
