--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -577,7 +577,7 @@ _structures:
               buttons: 
                   -   text: Discover more
                       url:     
-                      button-color: mint-400
+                      color-scheme: mint-400
           carousel:
               desktop-image-position: left
               dots: true
