--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -10,7 +10,7 @@ header_links:
     link: /experiences
   - text: SPA and WELLNESS
     link: /wellness
-  - text: WEDDINGS
+  - text: WEDDINGS AND EVENTS
     link: /weddings-and-events
 footer-logo-image: /uploads/kc-logo.png
 footer-logo-size: 450px
