--- a/_config.yml
+++ b/_config.yml
@@ -3,5 +3,5 @@ collections:
     output: true
     permalink: /:title
   offers:
-    output: false
+    output: true
     permalink: /offers/:title
