--- a/_data/seo.yml
+++ b/_data/seo.yml
@@ -1,11 +1,6 @@
-title: Sukhavati
+title: Regent Bali Canggu 
 description: >-
-  Sukhavati is a world-class, boutique retreat designed to help you achieve
-  profound, life-changing health transformation in a serene, natural
-  environment. Nestled in a quiet Balinese village, our luxurious sanctuary
-  provides a peaceful escape from the demands of modern life. With personalized
-  wellness and rejuvenating treatments, 
-image: /assets/images/sukhavati.png
-favicon_image: /uploads/sukhavati-brandmark-leaf.png
+image: 
+favicon_image: 
 google-site-verification: >-
 
