--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -17,42 +17,42 @@ footer-logo-size: 450px
 footer_nav_bar:
   - heading: ABOUT RESORT
     links:
-    - text: Rooms & Suites
-      link: /suites-and-villas
-    - text: DINING
-      link: /dining
-    - text: Weddings & Events
-      link: /weddings-and-events
-    - text: EXPERIENCES
-      link: /experiences
+      - text: Rooms & Suites
+        link: /suites-and-villas
+      - text: DINING
+        link: /dining
+      - text: Weddings & Events
+        link: /weddings-and-events
+      - text: EXPERIENCES
+        link: /experiences
   - heading: DETAILS
     links:
-    - text: About Us
-      link: #
-    - text: Media Center
-      link: #
-    - text: Need Help?
-      link: #
-    - text: Group Bookings
-      link: #
+      - text: About Us
+        link:
+      - text: Media Center
+        link:
+      - text: Need Help?
+        link:
+      - text: Group Bookings
+        link:
   - heading: Connect
     links:
-    - text: Facebook
-      link: #
-    - text: Instagram
-      link: #
-    - text: Email
-      link: #
-    - text: Call
-      link: #
-    - text: Contact
-      link: #
+      - text: Facebook
+        link: https://www.facebook.com/regentbalicanggu/
+      - text: Instagram
+        link: https://www.instagram.com/regentbalicanggu/
+      - text: Email
+        link: mailto:reservations.regentbali@ihg.com
+      - text: Call
+        link: tel:+62 361-201-9999
+      - text: Contact
+        link:
 footer-sub-links:
   - text: PRIVACY POLICY
-    url: #
+    url:
   - text: CORPORATE WEBSITE
-    url: #
+    url:
   - text: IHG REWARDS
-    url: #
+    url:
   - text: TERMS & CONDITIONS
-    url: #
+    url:
