--- a/_data/pop-up.yml
+++ b/_data/pop-up.yml
@@ -7,5 +7,5 @@ pop-up-width: 750px
 hide-duration-in-days: 1
 popup-delay-in-seconds: 1
 pop-up.color-scheme: base
-testing-mode: false
+testing-mode: true
 shown: false
