--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -132,8 +132,6 @@ footer-sub-links:
   - text: PRIVACY POLICY
     url: /privacy-policy
   - text: CORPORATE WEBSITE
-    url:
+    url:  https://www.ihg.com/regent/hotels/us/en/bali/dpscr/hoteldetail
   - text: IHG REWARDS
-    url:
-  - text: TERMS & CONDITIONS
-    url:
+    url:  https://www.ihg.com/onerewards/content/gb/en/home
